Fixing z-index for boards dropdown

--- a/greasemonkey/trello-swimlane-navigation/trello-swimlane-navifation.css
+++ b/greasemonkey/trello-swimlane-navigation/trello-swimlane-navifation.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	left: 0;
 	top: 0;
-	z-index: 20;
+	z-index: 3;
 	padding: 0;
 	margin: 0;
 	background: #fff;
